fixed gap of container

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ img {
   max-width: 540px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 24px;
   margin-top: 35px;
 }
 
